--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -87,6 +87,15 @@ textarea {
     font-family: inherit;
 }
 
+/* Change the white to any color */
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #fff !important;
+}
 input::-webkit-input-placeholder {
     color: var(--grey);
 }
@@ -422,8 +431,63 @@ select {
     position: absolute;
     right: 0;
     top: 50%;
-    transform: translateY(-10%);
+    transform: translateY(-60%);
     margin-right: 0.8rem;
+}
+
+.modal-content .error-message {
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: red;
+    margin-top: 0.5rem;
+}
+
+/* Select Input */
+
+.select-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.select-wrapper {
+    position: relative;
+}
+
+.select-wrapper label {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: var(--grey);
+    transition: all 0.1s ease-in-out;
+}
+
+.select-container select {
+    font-size: 1rem;
+    width: 100%;
+    height: 60px;
+    background: #000;
+    border: 1px solid var(--input-border);
+    border-radius: 0.2rem;
+    padding: 1.2rem 0 0 0.4rem;
+    transition: all 0.1s ease-in-out;
+}
+
+.select-container select.not-empty {
+    border: 1px solid var(--primary-colour);
+}
+
+.select-container select.not-empty + label {
+    color: var(--primary-colour);
+}
+
+.select-container select:focus {
+    border: 1px solid var(--primary-colour);
+}
+
+.select-container select:focus + label {
+    color: var(--primary-colour);
 }
 
 /* Links Widget */
