--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,65 +1,3 @@
-.column {
-    padding-top: 0.5rem;
-}
-
-.logo-container:hover {
-    background-color: rgba(239, 243, 244, 0.1);
-}
-
-/* Second column */
-
-.column.second {
-    border-right: 1px solid var(--border);
-    border-left: 1px solid var(--border);
-}
-
-.column.second {
-    /* padding: 0 1rem; */
-}
-
-.column.second header {
-    padding: 0 1rem;
-    height: 53px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.65);
-    backdrop-filter: blur(12px);
-    position: sticky;
-    top: 0;
-    z-index: 999999;
-}
-
-.column.second header h1 {
-    font-size: 1.3rem;
-}
-
-.test {
-    width: 100px;
-    height: 20px;
-    background-color: red;
-    position: absolute;
-}
-
-.notweet {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* Last column */
-
-.column.last {
-    padding: 0.5rem 0;
-    margin-left: 1rem;
-    width: 100%;
-}
-
-.column.last .sticky-wrapper {
-    position: sticky;
-    top: 13px;
-}
-
 .signup-container {
     display: flex;
     flex-direction: column;
@@ -107,32 +45,17 @@
 
 .agreement-text a {
     font-size: 0.8rem;
-    color: var(--blue);
 }
 
 .agreement-text a:hover {
     text-decoration: underline;
 }
 
-.links-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: space-around;
-    margin-top: 1rem;
-}
-
-.links-container a {
-    font-weight: 400;
-    padding-right: 0.5rem;
-    margin: 0.1rem 0;
-}
-
 .footer-login {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -141,6 +64,7 @@
 }
 
 .footer_text p {
+    margin-top: 0.1rem;
     font-weight: 500;
 }
 
@@ -169,4 +93,14 @@
 
 .footer_btns .signup:hover {
     background-color: rgb(230, 230, 230);
+}
+
+@media screen and (max-width: 542px) {
+    .footer-login {
+        height: 120px;
+        flex-direction: column;
+    }
+    .footer_text p {
+        text-align: center;
+    }
 }
