--- a/client/src/styles/TabList.css
+++ b/client/src/styles/TabList.css
@@ -5,6 +5,9 @@
 }
 
 .tab-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex: 1;
     width: 100%;
     height: 53px;
@@ -28,7 +31,7 @@
 .tab-item.active::after {
     content: "";
     position: absolute;
-    bottom: 1px;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 55px;
