--- a/client/src/styles/FloatOptions.css
+++ b/client/src/styles/FloatOptions.css
@@ -5,15 +5,16 @@
     width: 250px;
     position: absolute;
     z-index: 99999;
-    bottom: 90px;
-    left: 20px;
+    /* right: 0;
+    top: 0; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #000;
     border-radius: 1rem;
     box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 15px, rgba(255, 255, 255, 0.15) 0px 0px 3px 1px;
-    padding: 0.75rem 0;
+    /* padding: 0.75rem 0; */
+    overflow: hidden;
 }
 
 .float-options .more-btn {
@@ -23,6 +24,15 @@
     transition-duration: 0.2s;
 }
 
+.float-options-overlay {
+    position: fixed;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
+
 .float-options .more-btn:hover {
-    background-color: rgb(22, 24, 28);
+    background-color: var(--tweet-hover);
 }
